<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:shownIn="navigation_view">

    <group android:menuCategory="container">

        <item
            android:id="@+id/home_menu"
            android:title="@string/home"
            android:icon="@drawable/ic_homepage"/>

        <item
            android:id="@+id/edit"
            android:title="@string/edit"
            android:icon="@drawable/ic_edit"/>

        <item
            android:id="@+id/settings"
            android:title="@string/setting"
            android:icon="@drawable/ic_settings"/>

        <item
            android:id="@+id/logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_logout"/>

        <item
            android:id="@+id/delete"
            android:title="@string/delete"
            android:icon="@drawable/ic_delete"/>

    </group>
</menu>