<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.OtpFragment"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/otp_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:padding="@dimen/_10ssp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_10ssp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textStyle="bold"
            android:textColor="@color/green"
            android:textSize="@dimen/_18ssp"
            android:layout_marginRight="@dimen/_5ssp"
            android:layout_marginEnd="@dimen/_5ssp" />

        <TextView
            android:id="@+id/my_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:text="@string/app_name"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="@dimen/_16ssp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/otp_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_otp_logo"
            android:layout_marginBottom="@dimen/_10ssp"/>

        <TextView
            android:id="@+id/otp_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_verification"
            android:textSize="@dimen/_16ssp"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/_10ssp"/>

        <TextView
            android:id="@+id/otp_get_started"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_long_text"
            android:textColor="@color/green"
            android:layout_marginBottom="@dimen/_16ssp"
            android:gravity="center"/>

        <com.mukesh.OtpView
            android:id="@+id/otpView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:itemBackground="@drawable/follow_background"
            android:textColor="@color/green"
            app:OtpItemCount="6"
            app:OtpLineColor="@color/green"
            android:textStyle="bold"
            app:OtpItemSpacing="@dimen/_5ssp"
            android:textSize="@dimen/_18ssp"
            android:padding="@dimen/_5ssp"
            style="@style/OtpWidget.OtpView"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/verify_otp_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/follow_background"
            android:text="@string/register"
            android:textColor="@color/green"
            android:layout_marginVertical="@dimen/_10ssp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10ssp">

            <TextView
                android:id="@+id/replace_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_phone_number"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/green"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/send_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_again"
                android:textSize="@dimen/_10ssp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/light_green"
                android:textStyle="bold"
                android:visibility="invisible"
                android:paddingHorizontal="@dimen/_10ssp"/>

            <TextView
                android:id="@+id/counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:text="@string/_00_00"
                android:textColor="@color/light_green"
                android:textStyle="bold"
                android:paddingHorizontal="@dimen/_10ssp"/>



        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
