<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".view.fragment.ChooseLanguageFragment"
    android:padding="@dimen/_10ssp">


    <TextView
        android:id="@+id/skip_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/_5ssp"
        android:layout_gravity="right"
        android:padding="@dimen/_10ssp"
        android:text="@string/skip"
        android:textColor="@color/green"
        android:textStyle="bold"
        app:drawableEndCompat="@drawable/ic_skip"
        app:drawableRightCompat="@drawable/ic_skip"
        android:gravity="center"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/result_not_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_result"
            android:textColor="@color/green"
            android:layout_centerInParent="true"
            android:textSize="@dimen/_14ssp"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/chooseLanguageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_language"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:textSize="@dimen/_14ssp"
            android:layout_marginVertical="@dimen/_5ssp" />

        <LinearLayout
            android:id="@+id/search_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/search_edit_text_bg"
            android:layout_below="@id/chooseLanguageText"
            android:padding="@dimen/_8ssp">

            <EditText
                android:id="@+id/search_language"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/green"
                android:hint="@string/search"
                android:textColorHint="@color/green"
                android:drawablePadding="@dimen/_5ssp"
                android:layout_marginBottom="@dimen/_5ssp"
                android:drawableLeft="@drawable/ic_search"
                android:drawableStart="@drawable/ic_search"
                android:background="@null"
                android:layout_marginTop="@dimen/_2ssp"/>

            <ImageView
                android:id="@+id/et_close"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close"
                android:visibility="invisible"
                android:layout_marginTop="@dimen/_2ssp"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chooseLanguageRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/choose_language_list"
            android:clipToPadding="false"
            android:layout_below="@id/search_layout"
            android:layout_centerInParent="true"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/select_language_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:textColor="@color/white"
            android:text="@string/select"
            android:layout_alignParentBottom="true"
            android:visibility="invisible"/>

    </RelativeLayout>
</LinearLayout>