<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_12ssp"
    app:cardElevation="0dp"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10ssp"
    app:cardBackgroundColor="@color/green">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_16ssp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/process"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/_10ssp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="right">

            <TextView
                android:id="@+id/alert_do_it"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/just_do_it"
                android:background="@drawable/edit_text_background"
                android:textColor="@color/white"
                android:paddingVertical="@dimen/_5ssp"
                android:paddingHorizontal="@dimen/_10ssp"
                android:layout_marginRight="@dimen/_5ssp"
                android:layout_marginEnd="@dimen/_5ssp" />

            <TextView
                android:id="@+id/alert_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:background="@drawable/follow_background"
                android:textColor="@color/green"
                android:paddingVertical="@dimen/_5ssp"
                android:paddingHorizontal="@dimen/_10ssp"
                android:layout_marginLeft="@dimen/_5ssp"
                android:layout_marginStart="@dimen/_5ssp" />

        </LinearLayout>



    </LinearLayout>
</androidx.cardview.widget.CardView>